<resources>
    <string name="app_name" translatable="false">WordWizard</string>
    <string name="manage_vocabulary">Manage Vocabulary</string>
    <string name="settings">Settings</string>
    <string name="statistics">Stats</string>
    <string name="test_yourself">Test Yourself</string>
    <string name="enter_the_original_phrase">Enter the original phrase</string>
    <string name="enter_the_translated_phrase">Enter the translated phrase</string>
    <string name="add_the_phrase">Add the phrase</string>
    <string name="clear_your_list">Clear the chosen list</string>
    <string name="delete_phrases_manually">Manage phrases\' history</string>
    <string name="list_1">List 1</string>
    <string name="list_2">List 2</string>
    <string name="list_3">List 3</string>
    <string name="click_on_phrases_to_manage_them">Click on phrases to manage them</string>
    <string name="clear_history_of_acquired_terms">Clear history of acquired terms</string>
    <string name="clear_this_terms_history">Clear history of terms on this list</string>
    <string name="check_the_answers">Check the answers</string>
    <string name="answers_will_be_case_sensitive">Answers WILL be case sensitive</string>
    <string name="save_changes">Save Changes</string>
    <string name="acquired_phrases_will_not_delete_themselves_automaticaly">Acquired phrases WILL NOT delete themselves automatically</string>
    <string name="daily_learning_mode_is_off">Daily learning mode is OFF</string>
    <string name="daily_learning_mode_is_on">Daily learning mode is ON</string>
    <string name="acquired_phrases_will_delete_themselves_automaticaly">Acquired phrases WILL delete themselves automatically</string>
    <string name="pair_up_phrases">Pair up phrases</string>
    <string name="type_in_foreign_language">In foreign language</string>
    <string name="type_in_your_native_language">In your native language</string>
    <string name="memory" translatable="false">Memory</string>
    <string name="guess_phrases">Guess phrases</string>
    <string name="your_answer">Your answer</string>
    <string name="check_and_get_an_answer">Check and get an answer</string>
    <string name="check_without_getting_an_answer">Check without getting an answer</string>
    <string name="here_i_will_tell_you_whether_your_answer_was_correct">~~~~~Answer spot~~~~~~</string>
    <string name="delete">Delete</string>
    <string name="clear_history">Clear history</string>
    <string name="typeChoose">Type / choose</string>
    <string name="succesfullyCleared" >"Successfully cleared items off list "</string>
    <string name="clearedHistory" >"Cleared history of "</string>
    <string name="clearedHistory2" >" terms and made them not acquired."</string>
    <string name="noTermsAffectedd" >No terms were affected.</string>
    <string name="removed" >"Removed "</string>
    <string name="fromList">" from list "</string>
    <string name="memoryDone1" >"Congratulations. You got everything right in "</string>
    <string name="memoryDone2" >" turns."</string>
    <string name="dailyLearningNotifications" >Daily learning notifications</string>
    <string name="prolong">You\'ll prolong your streak if you test yourself at least once.</string>
    <string name="inactivity">You lost your streak due to inactivity.</string>
    <string name="streakEquals1">"Your current streak equals %d day(s)."</string>
    <string name="toSeeStreak">To see your streak, activate the daily learning mode in your settings.</string>
    <string name="results">"Results: "</string>
    <string name="right1">"right, "</string>
    <string name="wrong1">"WRONG, "</string>
    <string name="right2">right.</string>
    <string name="wrong2">WRONG.</string>
    <string name="everythingRight">You\'ve got everything right. Good job!</string>
    <string name="correct">Correct</string>
    <string name="wrongAndAnswer">"Wrong. The answer is "</string>
    <string name="wrongTryAgain">Wrong. Try again</string>
    <string name="progressNotSaved">Your progress was not saved.</string>
    <string name="savedSettings">Successfully saved your settings.</string>
    <string name="answers_will_not_be_case_sensitive">Answers WILL NOT be case sensitive</string>
    <string name="attempts">You will keep %d attempts per phrase in your memory</string>
    <string name="testSize">Each test will consist of %d phrases (unless there is no such amount)</string>
    <string name="acquiredAfter">The phrase will be deemed acquired after %d per cent success rate</string>
    <string name="stayTuned" >This option is not available yet. Stay tuned!</string>
    <string name="exit">Exit</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>