<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/component_5__1"
    tools:context=".AddVocabulary">

    <EditText
        android:id="@+id/textTerm1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/enter_the_original_phrase"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFEFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textTerm2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_the_translated_phrase"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#EFEFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTerm1" />

    <Button
        android:id="@+id/buttonAddPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/button_addphrase"
        android:enabled="false"
        android:text="@string/add_the_phrase"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTerm2" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_clearlist"
        android:text="@string/clear_your_list"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeletePhrase" />

    <RadioButton
        android:id="@+id/radioButtonList1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/list_1"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddPhrase"
        app:layout_constraintEnd_toStartOf="@+id/radioButtonList2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTerm2" />

    <RadioButton
        android:id="@+id/radioButtonList2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddPhrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTerm2" />

    <RadioButton
        android:id="@+id/radioButtonList3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_3"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddPhrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButtonList2"
        app:layout_constraintTop_toBottomOf="@+id/textTerm2" />

    <Button
        android:id="@+id/buttonDeletePhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/button_managehistory"
        android:text="@string/delete_phrases_manually"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddPhrase" />

</androidx.constraintlayout.widget.ConstraintLayout>