<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ciapki"
    tools:context=".DeleteVocabulary">

    <RadioButton
        android:id="@+id/radioButtonList2Delete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_listselect"
        android:text="@string/list_2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButtonList3Delete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_listselect"
        android:text="@string/list_3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButtonList2Delete"
        app:layout_constraintTop_toTopOf="@+id/radioButtonList2Delete" />

    <RadioButton
        android:id="@+id/radioButtonList1Delete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_listselect"
        android:checked="true"
        android:text="@string/list_1"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/radioButtonList2Delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioButtonList2Delete" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/pasujechyba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonList2Delete">

    </ListView>

    <Button
        android:id="@+id/buttonMakeNotAcquired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_settings"
        android:text="@string/clear_history_of_acquired_terms"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView" />

    <Button
        android:id="@+id/buttonClearTotalHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_managevocab"
        android:text="@string/clear_this_terms_history"
        android:textColor="#FFFFFF"
        app:backgroundTint="#708A26"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMakeNotAcquired" />

</androidx.constraintlayout.widget.ConstraintLayout>