<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grid"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonTestYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@drawable/button_testyourself"
        android:onClick="clickedTestYourself"
        android:text="@string/test_yourself"
        android:textAlignment="center"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVcurrentStreak"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="10dp" />

    <Button
        android:id="@+id/buttonAddVocab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_managevocab"
        android:onClick="clickedAddVocab"
        android:text="@string/manage_vocabulary"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTestYourself" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_settings"
        android:onClick="clickedSettings"
        android:text="@string/settings"
        android:textColor="#000000"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddVocab" />

    <Button
        android:id="@+id/buttonStats"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_stats"
        android:onClick="clickedStats"
        android:text="@string/statistics"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonSettings" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_exit"
        android:onClick="clickedExit"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStats" />

    <TextView
        android:id="@+id/TVcurrentStreak"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/drawable_textmain"
        android:gravity="center"
        android:textDirection="firstStrongRtl"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>