<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wincejtrujkatow"
    tools:context=".TranslatedPhrases">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="359dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreviousResult"
        app:srcCompat="@drawable/wykrzykniki" />

    <TextView
        android:id="@+id/textViewPreviousResult"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_exit"
        android:gravity="center"
        android:text="@string/here_i_will_tell_you_whether_your_answer_was_correct"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textColorHint="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPhrase"
        android:layout_width="225dp"
        android:layout_height="70dp"
        android:layout_marginTop="48dp"
        android:text="A phrase"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="225dp"
        android:layout_height="70dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/your_answer"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#AAAAAA"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonWithCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_clearlist"
        android:text="@string/check_and_get_an_answer"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/buttonWithoutAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonWithoutAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_managehistory"
        android:text="@string/check_without_getting_an_answer"
        app:backgroundTint="#F44B4B"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>